--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>ETHERyield</title>
+    <title>ETHER YIELD</title>
     <meta name="robots" content="max-image-preview:large" />
     <link
       rel="alternate"
@@ -1148,7 +1148,7 @@
               >
                 <div class="elementor-widget-container">
                   <a href="/">
-                    <h3>ETHERyield</h3>
+                    <h3>ETHER YIELD</h3>
                   </a>
                 </div>
               </div>
@@ -1196,7 +1196,7 @@
                             id="menu-item-249"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-249"
                           >
-                            <a href="https://t.me/etheryieldeth">Community</a>
+                            <a href="https://t.me/ETHER Yield eth">Community</a>
                           </li>
                           <li
                             id="menu-item-250"
@@ -1484,7 +1484,7 @@
                   >
                     <span
                       class="elementor-headline-plain-text elementor-headline-text-wrapper"
-                      >Elevate Your Crypto Experience</span
+                      >Earn Passive Ethereum Rewards Automatically</span
                     >
                     <span
                       class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper"
@@ -1545,9 +1545,9 @@
                     }
                   </style>
                   <p>
-                    Step into the future of decentralized finance with
-                    ETHERyield ($ETY), a revolutionary token designed to empower
-                    its holders with a groundbreaking 10% in ETH rewards.
+                    Step into the future of decentralized finance with ETHER
+                    Yield ($ETY), a revolutionary token designed to empower its
+                    holders with a groundbreaking 10% in ETH rewards.
                   </p>
                 </div>
               </div>
@@ -1607,22 +1607,22 @@
                       <div class="qodef-m-text qodef-text--original">
                         <span
                           class="qodef-m-text-item elementor-repeater-item-06c780b"
-                          >ETHERyield</span
-                        >
+                          >ETHER Yield
+                        </span>
                         <span
                           class="qodef-m-text-item elementor-repeater-item-bf94446"
-                          >ETHERyield</span
-                        >
+                          >ETHER Yield
+                        </span>
                       </div>
                       <div class="qodef-m-text qodef-text--copy">
                         <span
                           class="qodef-m-text-item elementor-repeater-item-06c780b"
-                          >ETHERyield</span
-                        >
+                          >ETHER Yield
+                        </span>
                         <span
                           class="qodef-m-text-item elementor-repeater-item-bf94446"
-                          >ETHERyield</span
-                        >
+                          >ETHER Yield
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -2233,7 +2233,7 @@
                                 </h2>
                                 <div class="body-description">
                                   <p>
-                                    ETHERyield will provide a
+                                    ETHER Yield will provide a
                                     secure and user-friendly crypto wallet
                                     application
                                   </p>
@@ -2502,9 +2502,9 @@
                                   <span class="prefix"></span>
                                   <span
                                     class="number"
-                                    data-value="10"
+                                    data-value="5"
                                     data-animation-duration="3500"
-                                    >10</span
+                                    >5</span
                                   >
                                   <span class="suffix">%</span>
                                 </div>
@@ -2532,10 +2532,9 @@
                                   <span class="prefix"></span>
                                   <span
                                     class="number"
-                                    data-value="10"
+                                    data-value="5"
                                     data-animation-duration="3500"
-                                    >10</span
-                                  >
+                                  ></span>
                                   <span class="suffix">%</span>
                                 </div>
                                 <h2 class="title">Sell</h2>
@@ -2753,7 +2752,7 @@
                       >
                         <div class="elementor-widget-container">
                           <p>
-                            ETHERyield will provide a secure and
+                            ETHER Yield will provide a secure and
                             user-friendly crypto wallet application. The app
                             allows users to store, send, and receive various
                             types of cryptocurrencies.
@@ -3425,11 +3424,12 @@
                               <div class="icon-box icon-box-body">
                                 <h2 class="title">Phase 2</h2>
                                 <p class="icon-box-description">
-                                  Launch of the crypto exchange and DEX Swap.<br />
+                                  Listings on CoinMarketCap and CoinGecko
+                                  complete.<br />
                                 </p>
                                 <div class="icon-box-button">
                                   <div class="btn-wrapper icon-position-before">
-                                    <a href="" class="icon-box-link">Q1</a>
+                                    <a href="" class="icon-box-link">Q2</a>
                                   </div>
                                 </div>
                               </div>
@@ -3484,7 +3484,7 @@
                                 </p>
                                 <div class="icon-box-button">
                                   <div class="btn-wrapper icon-position-before">
-                                    <a href="" class="icon-box-link">Q1</a>
+                                    <a href="" class="icon-box-link">Q4</a>
                                   </div>
                                 </div>
                               </div>
@@ -3861,7 +3861,7 @@
                           <div class="elementor-button-wrapper">
                             <a
                               class="elementor-button elementor-button-link elementor-size-sm"
-                              href="https://t.me/etheryieldeth"
+                              href="https://t.me/ETHER Yield eth"
                             >
                               <span class="elementor-button-content-wrapper">
                                 <span class="elementor-button-text"
@@ -3897,7 +3897,7 @@
                         data-widget_type="image.default"
                       >
                         <div class="elementor-widget-container">
-                          <h3>ETHERyield</h3>
+                          <h3>ETHER Yield</h3>
                         </div>
                       </div>
                     </div>
@@ -4179,7 +4179,7 @@
                             <span class="elementor-grid-item">
                               <a
                                 class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-c4c4970"
-                                href="https://x.com/etheryield"
+                                href="https://x.com/ETHER Yield "
                                 target="_blank"
                               >
                                 <span class="elementor-screen-only"
@@ -4191,7 +4191,7 @@
                             <span class="elementor-grid-item">
                               <a
                                 class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-fd3f02c"
-                                href="https://t.me/etheryieldeth"
+                                href="https://t.me/ETHER Yield eth"
                                 target="_blank"
                               >
                                 <span class="elementor-screen-only"
@@ -4228,7 +4228,7 @@
                         data-widget_type="text-editor.default"
                       >
                         <div class="elementor-widget-container">
-                          <p>© 2023 ; ETHERyield. All Rights Reserved</p>
+                          <p>© 2023 ; ETHER Yield . All Rights Reserved</p>
                         </div>
                       </div>
                     </div>
