--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@
                             id="menu-item-249"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-249"
                           >
-                            <a href="https://t.me/ETHER Yield eth">Community</a>
+                            <a href="https://t.me/etheryieldeth">Community</a>
                           </li>
                           <li
                             id="menu-item-250"
@@ -3707,7 +3707,7 @@
                                 </p>
                                 <div class="icon-box-button">
                                   <div class="btn-wrapper icon-position-before">
-                                    <a href="" class="icon-box-link">Q1</a>
+                                    <a href="" class="icon-box-link">Q4</a>
                                   </div>
                                 </div>
                               </div>
@@ -3861,7 +3861,7 @@
                           <div class="elementor-button-wrapper">
                             <a
                               class="elementor-button elementor-button-link elementor-size-sm"
-                              href="https://t.me/ETHER Yield eth"
+                              href="https://t.me/etheryieldeth"
                             >
                               <span class="elementor-button-content-wrapper">
                                 <span class="elementor-button-text"
@@ -4179,7 +4179,7 @@
                             <span class="elementor-grid-item">
                               <a
                                 class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-c4c4970"
-                                href="https://x.com/ETHER Yield "
+                                href="https://x.com/etheryield"
                                 target="_blank"
                               >
                                 <span class="elementor-screen-only"
@@ -4191,7 +4191,7 @@
                             <span class="elementor-grid-item">
                               <a
                                 class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-fd3f02c"
-                                href="https://t.me/ETHER Yield eth"
+                                href="https://t.me/etheryieldeth"
                                 target="_blank"
                               >
                                 <span class="elementor-screen-only"
