--- a/index.html
+++ b/index.html
@@ -4313,6 +4313,9 @@
             </div>
           </div>
         </div>
+
+        <img src="/200.png" alt="" style="display: none" />
+        <img src="/100.png" alt="" style="display: none" />
       </section>
     </div>
     <script>
