--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,7 @@
                             id="menu-item-250"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-250"
                           >
-                            <a href="chartlink">Chart</a>
+                            <a href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9">Chart</a>
                           </li>
                         </ul>
                       </div>
@@ -1740,7 +1740,7 @@
                   <div class="elementor-button-wrapper">
                     <a
                       class="elementor-button elementor-button-link elementor-size-sm"
-                      href="chartlink"
+                      href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9"
                     >
                       <span class="elementor-button-content-wrapper">
                         <span
