--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,10 @@
                             id="menu-item-250"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-250"
                           >
-                            <a href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9">Chart</a>
+                            <a
+                              href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9"
+                              >Chart</a
+                            >
                           </li>
                         </ul>
                       </div>
@@ -1259,8 +1262,8 @@
         data-id="5a0d42f1"
         style="
           background-image: linear-gradient(
-              rgba(0, 0, 0, 0.4),
-              rgba(0, 0, 0, 0.4)
+              rgba(0, 0, 0, 0.8),
+              rgba(0, 0, 0, 0.8)
             ),
             url(/bg.jpg);
           background-size: cover;
@@ -1740,14 +1743,14 @@
                   <div class="elementor-button-wrapper">
                     <a
                       class="elementor-button elementor-button-link elementor-size-sm"
-                      href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9"
+                      href="https://etherscan.io/token/0x3a2868C9A755BE1ec2977fB8f3BA8593c10c8DA4"
                     >
                       <span class="elementor-button-content-wrapper">
                         <span
                           class="elementor-button-icon elementor-align-icon-left"
                         >
                         </span>
-                        <span class="elementor-button-text">Chart</span>
+                        <span class="elementor-button-text">Etherscan</span>
                       </span>
                     </a>
                   </div>
@@ -3855,6 +3858,11 @@
                           >
                             Join our community Now
                           </h2>
+                          <h4
+                            style="color: #fff; font-size: 20px; margin: 25px 0"
+                          >
+                            Official Email: etheryield@outlook.com
+                          </h4>
                         </div>
                       </div>
                       <div
