--- a/index.html
+++ b/index.html
@@ -1743,6 +1743,19 @@
                   <div class="elementor-button-wrapper">
                     <a
                       class="elementor-button elementor-button-link elementor-size-sm"
+                      href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9"
+                      style="margin-right: 15px"
+                    >
+                      <span class="elementor-button-content-wrapper">
+                        <span
+                          class="elementor-button-icon elementor-align-icon-left"
+                        >
+                        </span>
+                        <span class="elementor-button-text">Chart</span>
+                      </span>
+                    </a>
+                    <a
+                      class="elementor-button elementor-button-link elementor-size-sm"
                       href="https://etherscan.io/token/0x3a2868C9A755BE1ec2977fB8f3BA8593c10c8DA4"
                     >
                       <span class="elementor-button-content-wrapper">
