--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
                   <div class="elementor-button-wrapper">
                     <a
                       class="elementor-button elementor-button-link elementor-size-sm"
-                      href="buylink"
+                      href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0x3a2868c9a755be1ec2977fb8f3ba8593c10c8da4"
                     >
                       <span class="elementor-button-content-wrapper">
                         <span
@@ -1575,7 +1575,7 @@
                   <div class="elementor-button-wrapper">
                     <a
                       class="elementor-button elementor-button-link elementor-size-sm"
-                      href="buylink"
+                      href="https://app.uniswap.org/#/swap?&chain=mainnet&use=v2&outputCurrency=0x3a2868c9a755be1ec2977fb8f3ba8593c10c8da4"
                     >
                       <span class="elementor-button-content-wrapper">
                         <span
