--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@
                 data-element_type="widget"
                 data-widget_type="button.default"
               >
-                <div class="elementor-widget-container">
+                <div class="elementor-widget-container button-grp">
                   <div class="elementor-button-wrapper">
                     <a
                       class="elementor-button elementor-button-link elementor-size-sm"
@@ -1583,6 +1583,34 @@
                         >
                         </span>
                         <span class="elementor-button-text">Buy Now</span>
+                      </span>
+                    </a>
+                  </div>
+                  <div class="elementor-button-wrapper">
+                    <a
+                      class="elementor-button elementor-button-link elementor-size-sm"
+                      href="https://www.dextools.io/app/en/ether/pair-explorer/0xceb5592779eeca5a0039036edeb9d5f472e607a9"
+                    >
+                      <span class="elementor-button-content-wrapper">
+                        <span
+                          class="elementor-button-icon elementor-align-icon-left"
+                        >
+                        </span>
+                        <span class="elementor-button-text">Chart</span>
+                      </span>
+                    </a>
+                  </div>
+                  <div class="elementor-button-wrapper">
+                    <a
+                      class="elementor-button elementor-button-link elementor-size-sm"
+                      href="https://etheryield.netlify.app/"
+                    >
+                      <span class="elementor-button-content-wrapper">
+                        <span
+                          class="elementor-button-icon elementor-align-icon-left"
+                        >
+                        </span>
+                        <span class="elementor-button-text">DAPP</span>
                       </span>
                     </a>
                   </div>
